syntax = "proto3";

package io.netifi.proteus;

import "google/protobuf/descriptor.proto";

option java_package = "io.netifi.proteus";
option java_outer_classname = "CoreProto";
option java_multiple_files = true;

extend google.protobuf.MethodOptions {
    ProteusOptions options = 1057;
}

message ProteusOptions {
    bool fire_and_forget = 1;
}